# text2sql

./: .gitignore  README.md  app.py  model.py  pyproject.toml  run.py  text2sql.py
archieve/: agents copy.py  app.py  llm.py  test_output.py
config/: __init__.py  config.yml  logging_config.py  settings.py
data/input/: dep_emp_tbl.md  dep_manager_tbl.md  department_tbl.md  employees_tbl.md  salaries_tbl.md  titles_tbl.md
data/sample_queries/: queries.json
data/tables/: dep_emp.md  department_tbl.md  salaries.md  titles.md
notebooks/: agent_testing.ipynb  sql_testing.ipynb  vector_db.ipynb
src/: agents.py  llm.py  sql.py  tools.py  utils.py
tests/dummy_outputs/: test_llm_output.json
vector_db/COMBINED_DB/: index.faiss  index.pkl
vector_db/SAMPLEQ_DB/: index.faiss  index.pkl
vector_db/TABLES/: index.pkl
vector_db/faiss/: index.faiss  index.pkl
