[project]
name = "text2sql"
version = "0.1.0"
description = "A tool to convert natural language queries into SQL statements."
authors = [
    {name = "niraj.kumbhar"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "unstructured[md] (>=0.17.2,<0.18.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "chroma (>=0.2.0,<0.3.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

