[project]
name = "text2sql"
version = "0.1.0"
description = ""
authors = [
    {name = "niraj-kumbhar",email = "kumbharniraj1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "unstructured[md] (>=0.18.15,<0.19.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "streamlit (>=1.39.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

